Phone first style

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -18,7 +18,7 @@
         letter-spacing: 0.1125rem;
         font-size: 0.6rem;
         transition: $transition-slow;
-        width: 30%;
+        width: 65%;
 
         &:hover {
             filter: drop-shadow(0 0 5px color(dua));
@@ -29,8 +29,8 @@
             transform: translateX(-4em);
         }
 
-        @include phone {
-            width: 65%;
+        @include pc {
+            width: 30%;
             transform: translateX(0em);
         }
 
@@ -64,18 +64,25 @@
     // }
 
     &_nav-links {
-        @include flex-row;
-        justify-content: space-around;
-        width: 50%;
         list-style: none;
         transition: $transition-slower;
-        opacity: 1;
-        pointer-events: all;
-        padding-left: 3em;
+        padding-left: 0em;
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        height: 100vh - $navbar-bar-height;
+        background-color: rgba(color(satu-darkest), 0.6);
+        @include flex-column;
+        justify-content: space-around;
+        width: 0%;
+        opacity: 0;
+        transition: $transition-fast;
 
         @include tablet {
             padding-left: 0em;
             position: absolute;
+            left: auto;
             right: 0;
             top: 0vh;
             height: 100vh;
@@ -87,38 +94,40 @@
             transition: $transition-fast;
         }
 
-        @include phone {
-            padding-left: 0em;
-            position: absolute;
-            left: 0;
-            top: 0;
-            bottom: 0;
-            height: 100vh - $navbar-bar-height;
-            background-color: rgba(color(satu-darkest), 0.6);
-            @include flex-column;
+        @include pc {
+            @include flex-row;
             justify-content: space-around;
-            width: 0%;
-            opacity: 0;
-            transition: $transition-fast;
+            position: static;
+            width: 50%;
+            height: $navbar-bar-height;
+            opacity: 1;
+            pointer-events: all;
+            padding-left: 3em;
+            background-color: rgba(color(satu-darkest), 0);
+
         }
 
         &_scroll {
+            top: $navbar-height-scroll;
+            height: 100vh - $navbar-bar-height - $navbar-height-scroll;
+
             @include tablet {
                 top: $navbar-height-scroll;
                 height: 100vh - $navbar-height-scroll;
             }
 
-            @include phone {
-                height: 100vh - $navbar-bar-height - $navbar-height-scroll;
+            @include pc {
+                top: 0;
+                height: $navbar-height;
             }
         }
 
         &_click {
             opacity: 1;
-            width: 40%;
+            width: 50%;
 
-            @include phone {
-                width: 50%;
+            @include tablet {
+                width: 40%;
             }
         }
 
@@ -151,7 +160,7 @@
             display: block;
         }
 
-        @include phone {
+        @include pc {
             display: none;
         }
 
@@ -181,18 +190,17 @@
     }
 
     &_bar {
-        display: none;
+        @include flex-row;
+        justify-content: space-around;
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        height: $navbar-bar-height;
+        background-color: rgba(color(satu-darkest), 0.6);
 
-        @include phone {
-            @include flex-row;
-            justify-content: space-around;
-            position: fixed;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            height: $navbar-bar-height;
-            background-color: rgba(color(satu-darkest), 0.6);
-
+        @include tablet {
+            display: none;
         }
 
         &_tombol {
@@ -243,4 +251,5 @@
 .navbar_scroll {
     background-color: rgba(color(satu-darkest), 0.6);
     height: $navbar-height-scroll;
+
 }
