--- a/scss/components/_picture-header.scss
+++ b/scss/components/_picture-header.scss
@@ -8,15 +8,15 @@
     // margin: 1em;
     height: 100vh;
     width: 100vw;
-    background-image: url(../../assets/img/webp/IMG_1893-low_web.webp);
     background-size: cover;
+    background-image: url(../../assets/img/webp/IMG_9962-low-phone_web.webp);
 
     @include tablet {
         background-image: url(../../assets/img/webp/IMG_1893-low-tablet_web.webp);
     }
 
-    @include phone {
-        background-image: url(../../assets/img/webp/IMG_9962-low-phone_web.webp);
+    @include pc {
+        background-image: url(../../assets/img/webp/IMG_1893-low_web.webp);
     }
 
     &_text {
@@ -24,56 +24,67 @@
         border: solid 0px;
         transform: translateX(2em);
         position: relative;
-        border-left: solid 7px rgba($color: color(satu), $alpha: .7);
-        border-bottom: solid 0px rgba($color: color(satu), $alpha: .7);
-        padding-left: 1em;
+        border-left: solid 2px rgba($color: color(satu), $alpha: .7);
+        border-bottom: solid 1px rgba($color: color(satu), $alpha: .7);
+        transform: translateX(.4em);
+        padding-left: .3em;
+        padding-bottom: .3em;
         transition: $transition-slower;
 
         @include tablet {
             border-left: solid 4px rgba($color: color(satu), $alpha: .7);
+            border-bottom: none;
+            padding-bottom: 0em;
             transform: translateX(.8em);
             padding-left: .8em;
+            transform: translateX(0);
+            margin-left: 1em;
         }
 
-        @include phone {
-            border-left: solid 2px rgba($color: color(satu), $alpha: .7);
-            border-bottom: solid 1px rgba($color: color(satu), $alpha: .7);
-            transform: translateX(.4em);
-            padding-left: .3em;
-            padding-bottom: .3em
+        @include pc {
+            border-left: solid 7px rgba($color: color(satu), $alpha: .7);
+            border-bottom: solid 0px rgba($color: color(satu), $alpha: .7);
+            padding-left: 1em;
+            margin-left: 2em;
         }
 
         h1 {
+            display: none;
+        }
+
+        .h1,
+        .h2 {
             color: color(white);
-            font-size: 3rem;
+            font-weight: normal;
+            font-size: 1.8rem;
 
             @include tablet {
                 font-size: 2.4rem;
             }
 
-            @include phone {
-                font-weight: normal;
-                font-size: 1.8rem;
+            @include pc {
+                font-weight: bold;
+                font-size: 3rem;
             }
         }
 
-        h2.fancy {
-            font-size: 2rem;
+        .fancy {
+            font-size: 1rem;
             font-weight: normal;
 
             @include tablet {
                 font-size: 1.4rem;
             }
 
-            @include phone {
-                font-size: 1rem;
+            @include pc {
+                font-size: 2rem;
             }
 
             //todo 
             span.animate {
                 margin: 0px 0px;
                 opacity: 0;
-                min-width: 9.250px;
+                min-width: 6.250px;
                 transition: $transition;
                 display: inline-block;
                 transform: translateY(50px);
@@ -82,8 +93,8 @@
                     min-width: 8.250px;
                 }
 
-                @include phone {
-                    min-width: 6.250px;
+                @include pc {
+                    min-width: 9.250px;
                 }
             }
 
