--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,20 +1,18 @@
 .footer {
-    height: 8em;
+    height: 6em;
+    margin-bottom: $navbar-bar-height;
+
     background-color: color(satu-lighter);
     @include flex-row;
     justify-content: space-around;
 
     @include tablet {
         height: 7em;
+        margin-bottom: 0;
     }
 
-    @include phone {
-        height: 6em;
-
-        @include phone {
-            margin-bottom: $navbar-bar-height;
-            ;
-        }
+    @include pc {
+        height: 8em;
     }
 
     &_copyright {
@@ -25,7 +23,7 @@
             font-size: .8rem;
         }
 
-        @include phone {
+        @include pc {
             font-size: .7rem;
         }
 
@@ -41,8 +39,8 @@
 
     &_contact {
         @include flex-row;
-        font-size: 2rem;
-        width: 20%;
+        width: 35%;
+        font-size: 1.6rem;
         justify-content: space-around;
         z-index: 2;
 
@@ -51,14 +49,13 @@
             font-size: 1.8rem;
         }
 
-        @include phone {
-            width: 35%;
-            font-size: 1.6rem;
+        @include pc {
+            font-size: 2rem;
+            width: 20%;
         }
 
         a {
             color: color(satu-darker);
-
 
             &:hover {
                 filter: drop-shadow(0 0 1px color(dua));
