--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,11 +1,11 @@
 @mixin tablet {
-  @media screen and (max-width:#{$tablet}) {
+  @media screen and (min-width:#{$tablet}) {
     @content;
   }
 }
 
-@mixin phone {
-  @media screen and (max-width:#{$phone}) {
+@mixin pc {
+  @media screen and (min-width:#{$pc}) {
     @content;
   }
 }
