--- a/scss/components/_text-jumbo.scss
+++ b/scss/components/_text-jumbo.scss
@@ -7,15 +7,14 @@
     // @include flex-row;
     // justify-content: space-around;
     display: grid;
-    grid-template-columns: 46% 46%;
-    grid-template-areas: "judul text";
+    grid-template-columns: 100%;
+    grid-template-areas: "judul"
+        "text";
     grid-gap: 2em;
 
     @include tablet {
-        grid-template-columns: 100%;
-        grid-template-areas: "judul"
-            "text";
-
+        grid-template-columns: 46% 46%;
+        grid-template-areas: "judul text";
     }
 
     &_background {
@@ -29,13 +28,6 @@
         height: 100%;
         pointer-events: none;
 
-        @include tablet {
-            // background-size: 250px;
-        }
-
-        @include phone {
-            // background-size: 300px;
-        }
 
         &_kecil {
             background-size: 150px;
@@ -47,24 +39,23 @@
         grid-area: judul;
         // width: 50%;
         color: color(black);
-        text-align: right;
+        text-align: left;
         font-size: 1.5em;
         font-weight: bold;
 
         @include tablet {
-            text-align: left;
+            text-align: right;
         }
 
         p {
             transition: $transition;
-            padding: 0 1em 0 0;
-            border-right: .2em solid color(satu-darkest);
+            padding: 0 0 .2em 0;
+            border-bottom: .2em solid color(satu-darkest);
 
             @include tablet {
-                padding: 0 0 .2em 0;
-
-                border-right: none;
-                border-bottom: .2em solid color(satu-darkest);
+                padding: 0 1em 0 0;
+                border-bottom: none;
+                border-right: .2em solid color(satu-darkest);
             }
         }
 
